// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Product List Testing empty List 1`] = `
<h1
  class="title"
>
  404, Ничего не найдено
</h1>
`;

exports[`Testing Product List Testing item phones 1`] = `
<a
  class="item"
  href="/13"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//google6.webp"
  />
  <div
    class="text"
  >
    Google Pixel 6
  </div>
  <div
    class="price"
  >
    50000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 2`] = `
<a
  class="item"
  href="/12"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//google7.webp"
  />
  <div
    class="text"
  >
    Google Pixel 7
  </div>
  <div
    class="price"
  >
    60000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 3`] = `
<a
  class="item"
  href="/7"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//huaweip60.webp"
  />
  <div
    class="text"
  >
    Huawei p60 pro
  </div>
  <div
    class="price"
  >
    100000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 4`] = `
<a
  class="item"
  href="/4"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//iphone12.webp"
  />
  <div
    class="text"
  >
    Iphone 12 pro max
  </div>
  <div
    class="price"
  >
    150000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 5`] = `
<a
  class="item"
  href="/1"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//iphone13promax.webp"
  />
  <div
    class="text"
  >
    Iphone 13 pro max
  </div>
  <div
    class="price"
  >
    180000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 6`] = `
<a
  class="item"
  href="/3"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//iphone14.webp"
  />
  <div
    class="text"
  >
    Iphone 14 pro max
  </div>
  <div
    class="price"
  >
    200000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 7`] = `
<a
  class="item"
  href="/11"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//pocox3.webp"
  />
  <div
    class="text"
  >
    Poco x3
  </div>
  <div
    class="price"
  >
    40000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 8`] = `
<a
  class="item"
  href="/10"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//pocox4.webp"
  />
  <div
    class="text"
  >
    Poco x4
  </div>
  <div
    class="price"
  >
    60000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 9`] = `
<a
  class="item"
  href="/9"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//pocox5.webp"
  />
  <div
    class="text"
  >
    Poco x5
  </div>
  <div
    class="price"
  >
    80000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 10`] = `
<a
  class="item"
  href="/6"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//samsunga54.webp"
  />
  <div
    class="text"
  >
    Samsung a54
  </div>
  <div
    class="price"
  >
    36000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 11`] = `
<a
  class="item"
  href="/2"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//samsungs21.webp"
  />
  <div
    class="text"
  >
    Samsung Galaxy S21 FE
  </div>
  <div
    class="price"
  >
    54000
     ₽
  </div>
</a>
`;

exports[`Testing Product List Testing item phones 12`] = `
<a
  class="item"
  href="/5"
>
  <img
    alt="product-img"
    class="img"
    src="https://15f3e04d9857.vps.myjino.ru//samsungs23.webp"
  />
  <div
    class="text"
  >
    Samsung s23 ultra
  </div>
  <div
    class="price"
  >
    70000
     ₽
  </div>
</a>
`;
